Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123984

[REG] Returning from slice view does not work if slice mode is changed while in the slice view

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.1, 6.8.0 FF
    • 6.7, 6.8
    • Graphs: 3D
    • None
    • 6825dd4ca (dev), 213992469 (6.7)

    Description

      Steps to reproduce in widgetgraphgallery example:

      • Change selection mode to Slice into Row
      • Select a bar
      • Change selection mode to Slice into Column
      • Try to return to normal view

      -> view stays in slice

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dilek Dilek Akcay
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes