Fix slice issue on widgetgraphgallery

Fixes: QTBUG-123984
Change-Id: I2f02277c3551c7aa0f7796919ccda82c253732c8
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 6825dd4ca23fa1367c6692d70807bfeabb596a29)